--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,12 @@
             class="bg-yellow-500 hover:bg-yellow-600 active:scale-95 transition px-4 py-3 rounded-xl w-full font-semibold text-black">
             🔄 Backup Manual
         </button>
+        
+          <button id="gdriveBackup"
+    class="w-full bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 rounded-lg mt-4 shadow-md transition duration-200 ease-in-out">
+    ☁️ Backup Manual ke Google Drive
+            </button>
+
 
         <div class="flex flex-col space-y-3">
             <div class="flex space-x-3 items-center">
@@ -43,6 +49,18 @@
                 <input id="time" type="time"
                     class="bg-gray-700 p-2 rounded-xl flex-1 text-gray-300 focus:outline-none focus:ring focus:ring-indigo-400">
             </div>
+
+            <div class="flex flex-col sm:flex-row sm:space-x-6 space-y-2 sm:space-y-0 items-start sm:items-center mb-4">
+                <label class="flex items-center space-x-3 bg-gray-100 hover:bg-gray-200 transition-colors px-4 py-2 rounded-xl shadow-sm cursor-pointer">
+                    <input type="checkbox" id="backupLocal" checked class="accent-blue-600 w-4 h-4">
+                    <span class="text-gray-800 font-medium">Backup ke Lokal</span>
+                </label>
+                <label class="flex items-center space-x-3 bg-gray-100 hover:bg-gray-200 transition-colors px-4 py-2 rounded-xl shadow-sm cursor-pointer">
+                    <input type="checkbox" id="backupGdrive" checked class="accent-blue-600 w-4 h-4">
+                    <span class="text-gray-800 font-medium">Backup ke Google Drive</span>
+                </label>
+            </div>
+
             <button id="autoBackup"
                 class="bg-purple-600 hover:bg-purple-700 active:scale-95 transition px-4 py-3 rounded-xl w-full font-semibold">
                 🕒 Set Backup Otomatis
@@ -54,8 +72,6 @@
             <p class="text-gray-400">📄 Log backup akan tampil di sini...</p>
         </div>
     </div>
-
-    <p class="mt-6 text-sm text-gray-500">Made with ❤️ by Dimas</p>
 
     <script src="./renderer.js"></script>
 </body>
