--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                 🕒 Set Backup Otomatis
             </button>
             <button id="openSheet"
-                class="bg-indigo-500 hover:bg-indigo-600 active:scale-95 transition px-4 py-3 rounded-xl w-full font-semibold">
+                class="bg-purple-600 hover:bg-purple-700 active:scale-95 transition px-4 py-3 rounded-xl w-full font-semibold">
                 📄 Lihat Google Sheets
             </button>
 
