add direct to gdrive

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,11 @@
     ☁️ Backup Manual ke Google Drive
             </button>
 
+            <button id="openGDrive"
+                onclick="window.open('https://drive.google.com/drive/my-drive', '_blank')"
+                class="w-full bg-blue-700 hover:bg-blue-800 text-white font-semibold py-3 mt-2 shadow-md transition duration-200 ease-in-out">
+                🌐 Buka Google Drive
+            </button>
 
         <div class="flex flex-col space-y-3">
             <div class="flex space-x-3 items-center">
