--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 
             <button id="openGDrive"
                 onclick="window.open('https://drive.google.com/drive/my-drive', '_blank')"
-                class="w-full bg-blue-700 hover:bg-blue-800 text-white font-semibold py-3 mt-2 shadow-md transition duration-200 ease-in-out">
+                class="bg-blue-500 hover:bg-blue-600 active:scale-95 transition px-4 py-3 rounded-xl w-full font-semibold">
                 🌐 Buka Google Drive
             </button>
 
