--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,11 @@
                 📄 Lihat Google Sheets
             </button>
 
+            <button id="cancelBackup"
+            class="bg-green-500 hover:bg-green-600 active:scale-95 transition px-4 py-3 rounded-xl w-full font-semibold mt-2">
+            ⏹️ Batalkan Backup
+            </button>
+
         </div>
 
         <div id="log"
